# SPttCrewAITraining

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  drafts.md  pyproject.toml  report.md  setup.sh  visuals.md
src/agentic/: agentic_config.py
src/base_crew/: crew.py  main.py
src/base_crew/config/: agents.yaml  tasks.yaml
src/basecrew/: crew.py  main.py
src/basecrew/config/: agents.yaml  tasks.yaml
src/database_extractor/: crew.py  main.py
src/database_extractor/config/: agents.yaml  tasks.yaml
src/database_extractor/tools/: __init__.py  sql_tool.py
