[project]
name = "base_crew"
version = "0.0.1"
description = "Base Crew using crewAI"
authors = [
    { name = "Plan.net", email = "plan-net@house-of-communication.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.70.1,<1.0.0",
    "fastapi[all]>=0.109.0",
    "uvicorn>=0.27.0",
    "python-dotenv>=1.0.0",
    "ollama>=0.4.4"
]

[project.scripts]
run_crew = "base_crew.main:run"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

