[project]
name = "basecrew"
version = "0.1.0"
description = "basecrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
base_crew = "basecrew.main:run"
run_crew = "basecrew.main:run"
train = "basecrew.main:train"
replay = "basecrew.main:replay"
test = "basecrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
